[package]
name = "crabtagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.1"
mime-sniffer = "0.1.2"
multitag = "0.2"

[lints.clippy.pedantic]
level = "warn"
priority = -1

[lints.clippy.too_many_lines]
level="allow"
